[gd_scene load_steps=4 format=3 uid="uid://eml7ce8s1p6u"]

[ext_resource type="Texture2D" uid="uid://bfdnrbeen54db" path="res://Images/Cards/Test/cardBack_green3.png" id="1_6f42i"]
[ext_resource type="Script" path="res://Scripts/card_slot.gd" id="1_p7rlj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iy2tf"]
size = Vector2(140, 190)

[node name="CardSlot" type="Node2D"]
script = ExtResource("1_p7rlj")

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.141176)
z_index = -1
texture = ExtResource("1_6f42i")

[node name="ColorRect" type="ColorRect" parent="BG"]
offset_left = -63.0
offset_right = 63.0
offset_bottom = 22.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_iy2tf")

[node name="Array_Pos" type="Label" parent="."]
offset_left = 23.0
offset_top = -87.0
offset_right = 63.0
offset_bottom = -64.0
text = "0
"

[node name="Array_Number" type="Label" parent="."]
offset_left = -62.0
offset_top = -87.0
offset_right = -22.0
offset_bottom = -64.0
text = "0
"

[node name="Card_Info" type="Label" parent="."]
offset_left = -63.0
offset_top = 30.0
offset_right = 63.0
offset_bottom = 53.0
